fix(Header): eliminate horizontal menu scroll on smaller devices (for real this time)

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -72,8 +72,8 @@
         display: inline;
 
         a {
-          padding-left: 8px;
-          padding-right: 8px;
+          padding-left: 7px;
+          padding-right: 7px;
         }
       }
     }
